kube/ingress/echo_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - api.liveontwitch.app
    secretName: letsencrypt-prod
  rules:
  - host: api.liveontwitch.app
    http:
      paths:
      - backend:
          serviceName: django-service
          servicePort: 8080
